fixed footer spacing
footer spacing with quote. and fixed broken img tag

--- a/style.css
+++ b/style.css
@@ -941,7 +941,7 @@ footer{
   display: flex;
   justify-content: center;
   background-color: #283b3a;
-  padding: 20px;
+  padding: 10px 20px;
 }
 .fa {
   width: 50px;
@@ -952,6 +952,7 @@ footer{
 footer a{
   margin-left:15px;
   margin-right: 15px;
+  align-self: center;
 }
 footer p{
   flex-direction: row;
@@ -959,7 +960,6 @@ footer p{
   text-align: center;
   color:rgb(241, 241, 241);
   font-family: 'poppins', sans-serif;
-  align-self: center;
 }
 
 /* Small devices (portrait tablets and large phones, 600px and up) */
